Deploy setup for Render and latest changes